--- a/css/estilos.css
+++ b/css/estilos.css
@@ -93,3 +93,45 @@ form {
     width: 350px;
 }
 
+
+
+
+.socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+
+}
+
+.socials li{
+    margin: 0 10px;
+}
+
+.socials a {
+    text-decoration: none;
+    color: #fff;
+
+}
+
+.socials a i {
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+
+.socials a:hover i {
+    color: aqua;
+}
+
+.footer-bottom {
+    background: black;
+    width: 100;
+    padding: 10px 0px;
+    display: flex;
+    
+}
+
+.footer-bottom p {
+    padding: 10px;
+}
