--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,7 +47,10 @@ h1 {
     color: #FFF;
 }
 
-/* Buscar */
+
+
+
+/* -- BUSCADOR -- */
 
 form {
     margin-left: 30px  ;
@@ -68,7 +71,7 @@ form {
 }
 
 .form-control::placeholder {
-    color: #FFF; 
+    color: #ffffff; 
 }
 
 .input-group .input-group-text {
@@ -90,14 +93,16 @@ form {
 }
 
 
-.card {
-    position: relative;
+/* -- CARDS INDEX -- */
+
+.cartas {
+    position:relative;
     width: 300px;
-    height: 350px;
-    margin: 20px;
+    height: 550px;
+    margin: 30px;
 }
 
-.card .face {
+.cartas .face {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -107,19 +112,19 @@ form {
     transition: .5s;
 }
 
-.card .front {
+.cartas .front {
     transform: perspective(600px) rotateY(0deg);
     box-shadow: 0 5px 10px #000;
 }
 
-.card .front img {
+.cartas .front img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.card .front h3 {
+.cartas .front h3 {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -130,7 +135,7 @@ form {
     text-align: center;
 }
 
-.card .back {
+.cartas .back {
     transform: perspective(600px) rotateY(180deg);
     background: rgb(3, 35, 54);
     padding: 15px;
@@ -142,38 +147,191 @@ form {
     box-shadow: 0 5px 10px #000;
 }
 
-.card .back .link {
+.cartas .back .link {
     border-top: solid 1px #ffffff;
     height: 50px;
     line-height: 50px;
 }
 
-.card .back .link a {
+.cartas .back .link a {
     color: #ffffff;
 }
 
-.card .back h3 {
+.cartas .back h3 {
     font-size: 30px;
     margin-top: 20px;
     letter-spacing: 2px;
 }
 
-.card .back p {
+.cartas .back p {
     letter-spacing: 1px;
 } 
 
-.card:hover .front {
+.cartas:hover .front {
     transform: perspective(600px) rotateY(180deg);
 }
 
-.card:hover .back {
+.cartas:hover .back {
     transform: perspective(600px) rotateY(360deg);
 }
 
 
 
+/* -- BOTTONS --*/
+
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #313131;
+    border-radius: 9px;
+    
+}
+
+.bo a{
+    position: relative;
+    display: inline-block;
+    padding: 25px 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 4px;
+    color: #f40303;
+    font-size: 1.2rem;
+    transition: .3s;
+    overflow: hidden;
+    margin-right: 70px;
+    height: 30px;
+}
+
+.bo a:hover{
+    background-color: #03e9f4;
+    color: #050801;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 25px#03e9f4,
+                0 0 50px #03e9f4,
+                0 0 300px #03e9f4;
+    -webkit-box-reflect: below 1px linear-gradient(transparent,#0005);
+}
+
+.bo a p {
+    color: #000;
+}
+
+span{
+    position: absolute;
+    display: block;
+}
 
 
+span:nth-child(1){
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 1px;
+    animation: animate1 1s infinite;
+}
+
+
+a span:nth-child(2){
+    top: -100%;
+    right: 0;
+    width: 1px;
+    height: 100%;
+    background: linear-gradient(180deg,transparent,#f40303);
+    animation: animate2 2s infinite;
+    animation-delay: .25s;
+}
+@keyframes animate2{
+    0%{
+        top:-100%;
+    }
+    100%{
+        top: 100%;
+    }
+}
+
+a span:nth-child(3){
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(270deg,transparent,#f40303);
+    animation: animate3 2s infinite;
+    animation-delay: .5s;
+}
+@keyframes animate3{
+    0%{
+        right: -100%;
+    }
+    100%{
+        right: 100%;
+    }
+}
+a span:nth-child(4){
+    bottom: -100%;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    background: linear-gradient(360deg,transparent,#f40303);
+    animation: animate4 2s infinite;
+    animation-delay: .75s;
+}
+@keyframes animate4{
+    0%{
+        bottom: -100%;
+    }
+    100%{
+        bottom: 100%;
+    }
+}
+
+a span:nth-child(5){
+    bottom: -100%;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    background: linear-gradient(360deg,transparent,#f40303);
+    animation: animate4 2s infinite;
+    animation-delay: .75s;
+}
+@keyframes animate5{
+    0%{
+        bottom: -100%;
+    }
+    100%{
+        bottom: 100%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* creditos */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* footer*/
 
 
 
